--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.7.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
