--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.7.2",
+    "date-fns": "^2.30.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "prisma": "^5.5.2",
