--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^5.7.2",
+    "@uploadthing/react": "^6.0.0",
     "date-fns": "^2.30.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "uploadthing": "^6.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
