--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.7.2",
     "@uploadthing/react": "^6.0.0",
     "date-fns": "^2.30.0",
-    "next": "14.0.1",
+    "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "stripe": "^14.8.0",
     "uploadthing": "^6.0.1",
     "zod": "^3.22.4"
   },
