--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tanstack/react-query": "^5.7.2",
     "@uploadthing/react": "^6.0.0",
     "date-fns": "^2.30.0",
+    "framer": "^2.4.1",
+    "motion": "^10.16.4",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "prisma": "^5.5.2",
